2008-12-14  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/git/anjuta-git.glade:
	Add comments for issues of bug #549374

	* po/POTFILES.in:
	Add two missing files in translation list

2008-12-13  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (gtree_compare_func),
	(on_editor_buffer_symbols_update_timeout),
	(on_project_element_added), (do_check_offline_files_changed),
	(on_scan_end_manager), (symbol_db_activate):
	* plugins/symbol-db/plugin.h:
	* plugins/symbol-db/symbol-db-engine.c
	(sdb_engine_get_dyn_query_node_by_id),
	(sdb_engine_insert_dyn_query_node_by_id),
	(sdb_engine_populate_db_by_tags), (sdb_engine_ctags_output_thread),
	(sdb_engine_scan_files_1), (sdb_engine_init):
	* plugins/symbol-db/symbol-db-prefs.c (symbol_db_prefs_new):
	code cleaning and converted (gpointer) to GINT_TO_POINTER to avoid x64 problems.
	Implemented last scan-end task on plugin.c.

2008-12-12  Massimo Cora'  <mcora@svn.gnome.org>

	reviewed by: Johannes Schmid <jhs@gnome.org>

	* plugins/symbol-db/plugin.c
	(on_editor_buffer_symbol_update_scan_end),
	(on_editor_buffer_symbols_update_timeout):
	* plugins/symbol-db/symbol-db-engine.c (sdb_engine_add_new_symbol):
	* plugins/symbol-db/symbol-db-engine.h:
	#562808 – symbol-db crashes with latest libgda

2008-12-11  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/tools/plugin.c,
	plugins/tools/anjuta-tools.glade,
	plugins/tools/tool.c,
	plugins/tools/tool.h,
	plugins/tools/variable.c,
	plugins/tools/editor.c:
	Partial fix #560857: Remove use of g_mem_chunk in tools plugin
	Partial fix #513156: Get rid of libgnome(ui)

2008-12-11  Adam Dingle  <adam@medovina.org>

	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>

	* src/anjuta.ui,
	src/main.c,
	plugins/build-basic-autotools/plugin.c,
	plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin.ui,
	(added) plugins/build-basic-autotools/anjuta-build-24.png,
	(added) plugins/build-basic-autotools/anjuta-build-16.png,